--- a/cv.html
+++ b/cv.html
@@ -299,6 +299,9 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="projects.html">Projects</a>
+</li>
+<li>
   <a href="cv.html">
     <span class="fa fa-file-pdf-o"></span>
      
