--- a/about.html
+++ b/about.html
@@ -345,9 +345,13 @@ $(document).ready(function () {
 </div>
 
 
-<div id="header" class="section level2">
-<h2>Header</h2>
-<p>Say more about you here.</p>
+<p>Researcher in Genetics Laboratory of Genetics Deparment of Biology, Ecology and Heart Sciences University of Calabria ## <a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></p>
+<div id="my-courses" class="section level2">
+<h2>My courses</h2>
+<ul>
+<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&amp;LANG=ITA&amp;70137&amp;LANG=ITA">APPLIED HUMAN GENETICS</a></li>
+<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&amp;LANG=ITA&amp;63499&amp;LANG=ITA">TECHNIQUES IN FORENSIC GENETICS</a></li>
+</ul>
 </div>
 
 
