--- a/projects.html
+++ b/projects.html
@@ -350,7 +350,7 @@ $(document).ready(function () {
 <h2><a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></h2>
 </div>
 <div id="my-courses" class="section level2">
-<h2>[my Courses]</h2>
+<h2>My courses</h2>
 <ul>
 <li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&amp;LANG=ITA&amp;70137&amp;LANG=ITA">APPLIED HUMAN GENETICS</a></li>
 <li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&amp;LANG=ITA&amp;63499&amp;LANG=ITA">TECHNIQUES IN FORENSIC GENETICS</a></li>
