--- a/about.html
+++ b/about.html
@@ -345,7 +345,13 @@ $(document).ready(function () {
 </div>
 
 
-<p>Researcher in Genetics Laboratory of Genetics Deparment of Biology, Ecology and Heart Sciences University of Calabria ## <a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></p>
+<div id="actual-position" class="section level2">
+<h2>Actual position</h2>
+<p>Researcher in Genetics, Laboratory of Genetics, Deparment of Biology, Ecology and Heart Sciences, University of Calabria</p>
+</div>
+<div id="my-unical-webpage" class="section level2">
+<h2><a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></h2>
+</div>
 <div id="my-courses" class="section level2">
 <h2>My courses</h2>
 <ul>
