--- a/cv.html
+++ b/cv.html
@@ -264,7 +264,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">ALBERTO</a>
+      <a class="navbar-brand" href="index.html">ALBERTO MONTESANTO</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -306,6 +306,13 @@ $(document).ready(function () {
     <span class="fa fa-envelope-o"></span>
      
     Contact me
+  </a>
+</li>
+<li>
+  <a href="https://github.com/albertomontesanto">
+    <span class="fa fa-adjust"></span>
+     
+    Prova
   </a>
 </li>
 <li>
