--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>CIAO to my website!</title>
+<title>Welcome to my website!</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,7 +264,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">ALBERTO</a>
+      <a class="navbar-brand" href="index.html">ALBERTO MONTESANTO</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -306,6 +306,13 @@ $(document).ready(function () {
     <span class="fa fa-envelope-o"></span>
      
     Contact me
+  </a>
+</li>
+<li>
+  <a href="https://github.com/albertomontesanto">
+    <span class="fa fa-adjust"></span>
+     
+    Prova
   </a>
 </li>
 <li>
