--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Welcome to my website!</title>
+<title>Research</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -338,12 +338,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Welcome to my website!</h1>
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
-<p>You’re up and running!</p>
+<p>Sometimes I like to do projects and then post them on the internet for the whole world to benefit! here’s some examples.</p>
 
 
 
