--- a/projects.html
+++ b/projects.html
@@ -343,6 +343,7 @@ $(document).ready(function () {
 </div>
 
 
+<p>Dovrebbe andare bene così</p>
 <p>Sometimes I like to do projects and then post them on the internet for the whole world to benefit! here’s some examples.</p>
 <div id="my-unical-webpage" class="section level2">
 <h2><a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></h2>
