--- a/people.html
+++ b/people.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About me</title>
+<title>People</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -338,25 +338,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About me</h1>
+<h1 class="title toc-ignore">People</h1>
 
 </div>
 
 
-<div id="actual-position" class="section level2">
-<h2>Actual position</h2>
-<p>Researcher in Genetics, Laboratory of Genetics, Deparment of Biology, Ecology and Heart Sciences, University of Calabria</p>
-</div>
-<div id="my-unical-webpage" class="section level2">
-<h2><a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></h2>
-</div>
-<div id="my-courses" class="section level2">
-<h2>My courses</h2>
-<ul>
-<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&amp;LANG=ITA&amp;70137&amp;LANG=ITA">APPLIED HUMAN GENETICS</a></li>
-<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&amp;LANG=ITA&amp;63499&amp;LANG=ITA">TECHNIQUES IN FORENSIC GENETICS</a></li>
-</ul>
-</div>
+<p>#Alberto Montesanto</p>
+<p>#Silvana Geracitano</p>
+<p>#Ersilia Paparazzo</p>
 
 
 
