--- a/research.html
+++ b/research.html
@@ -309,7 +309,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://github.com/albertomontesanto">
+  <a href="people.html">
     <span class="fa fa-adjust"></span>
      
     People
@@ -343,7 +343,13 @@ $(document).ready(function () {
 </div>
 
 
-<p>Sometimes I like to do projects and then post them on the internet for the whole world to benefit! here’s some examples.</p>
+<div id="forensic-dna-phenotyping" class="section level1">
+<h1>Forensic DNA Phenotyping</h1>
+<p>The FDP-Lab focused on the analysis of genetic and epigenetic data in the frame of a new field of Forenics Genetics called Forensic DNA Phenotyping. It is aimed at</p>
+</div>
+<div id="recent-pubblications" class="section level1">
+<h1>Recent pubblications</h1>
+</div>
 
 
 
