--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://github.com/albertomontesanto">
+  <a href="people.html">
     <span class="fa fa-adjust"></span>
      
     People
