--- a/donate.html
+++ b/donate.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Projects</title>
+<title>donate.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,8 +23,6 @@
 <script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
 <script src="site_libs/anchor-sections-1.0/anchor-sections.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -341,37 +339,13 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>Dovrebbe andare bene così</p>
-<p>Sometimes I like to do projects and then post them on the internet for the whole world to benefit! here’s some examples.</p>
-<div id="my-unical-webpage" class="section level2">
-<h2><a href="https://www.unical.it/portale/strutture/dipartimenti_240/dibest/docenti/montesanto/">My UniCal webpage</a></h2>
-</div>
-<div id="my-courses" class="section level2">
-<h2>My courses</h2>
-<ul>
-<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?70137&amp;LANG=ITA&amp;70137&amp;LANG=ITA">APPLIED HUMAN GENETICS</a></li>
-<li><a href="https://www.unical.it/portale/portaltemplates/view/view_scheda_insegnamento.cfm?63499&amp;LANG=ITA&amp;63499&amp;LANG=ITA">TECHNIQUES IN FORENSIC GENETICS</a></li>
-</ul>
-</div>
-<div id="data-visualization-in-r" class="section level2">
-<h2><a href="http://nickstrayer.me/visualization_in_r/">Data Visualization in R</a></h2>
-<ul>
-<li>An RMarkdown presentation on the common mistakes made in visualization and how to fix them.</li>
-<li>Includes a GitHub repo for access to all the code.</li>
-<li>Look at how high quality my work is, hire and or collaborate with me.</li>
-</ul>
-</div>
-<div id="statistical-plots" class="section level2">
-<h2><a href="http://bl.ocks.org/nstrayer/37a503dd1db369a8f7e3ce21757e19ee">Statistical Plots</a></h2>
-<ul>
-<li>Interactive plots of things</li>
-<li>I can code!</li>
-</ul>
+<div id="donation-button" class="section level1">
+<h1>Donation Button</h1>
+<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=alberto.montesanto%40gmail.com&amp;currency_code=EUR"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg" alt="Donate" /></a></p>
 </div>
 
 
