--- a/about.html
+++ b/about.html
@@ -329,6 +329,9 @@ $(document).ready(function () {
     GitHub
   </a>
 </li>
+<li>
+  <a href="donate.md">Donate</a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
