--- a/index.html
+++ b/index.html
@@ -329,9 +329,6 @@ $(document).ready(function () {
     GitHub
   </a>
 </li>
-<li>
-  <a href="donate.md">Donate</a>
-</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -347,6 +344,10 @@ $(document).ready(function () {
 
 
 <p>You’re up and running!</p>
+<div id="donation-button" class="section level1">
+<h1>Donation Button</h1>
+<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=alberto.montesanto%40gmail.com&amp;currency_code=EUR"><img src="https://img.shields.io/badge/Donate-PayPal-green.svg" alt="Donate" /></a></p>
+</div>
 
 
 
